basic clean-up for modern Java